trending page extra unimportant changes

--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -64,7 +64,7 @@
                 var obj = JsonConvert.DeserializeObject<Movie>(result.ToString());
                 movies.Add(obj);
                 
-                Console.WriteLine(obj.PosterPath);
+                Console.WriteLine(obj.BackdropPath);
             
             
         }
