--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -17,12 +17,24 @@
         </MudContainer>
     </MudMainContent>
 </MudLayout>
-
+<MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode"/>
 @code {
     bool _drawerOpen = true;
 
     void DrawerToggle()
     {
         _drawerOpen = !_drawerOpen;
+    }
+    
+    private bool _isDarkMode;
+    private MudThemeProvider _mudThemeProvider;
+    
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            _isDarkMode = await _mudThemeProvider.GetSystemPreference();
+            StateHasChanged();
+        }
     }
 }
