--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -15,24 +15,23 @@
         <MudGrid>
             @foreach (var item in movies)
             {
-                string poster="https://image.tmdb.org/t/p/w200"+@item.PosterPath;
-              <MudItem xs="6" sm="2">
-                             <MudButton OnClick="@(()=>MovieDetails(@item.Id))">
-                                  <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
-                                      <MudImage Src="@poster" Fluid="true" Alt=@item.Title Elevation="25" Class="rounded-lg"/>
-                                      <MudText Align="Align.Center">@item.Title</MudText>
-                                  </MudPaper>
-                              </MudButton>
-                          </MudItem>
+                string poster = "https://image.tmdb.org/t/p/w200" + @item.PosterPath;
+                <MudItem xs="6" sm="2">
+                    <MudButton OnClick="@(() => MovieDetails(@item.Id))">
+                        <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
+                            <MudImage Src="@poster" Fluid="true" Alt=@item.Title Elevation="25" Class="rounded-lg"/>
+                        </MudPaper>
+                    </MudButton>
+                </MudItem>
             }
-            
+
         </MudGrid>
     </MudContainer>
 </MudLayout>
 
 @code {
     List<Movie> movies = new();
-    
+
 
     //Deserializes the JSON and puts it in the MovieEntity object
     //TODO move this method to MovieDetails and only have navigationManager in her
@@ -46,36 +45,32 @@
     protected override void OnParametersSet()
     {
         MovieListMethod();
-
     }
 
     private void MovieListMethod()
     {
-        
         WebClient atv = new WebClient();
         var data = atv.DownloadString("https://api.themoviedb.org/3/trending/movie/week?api_key=a5ab4805002668ee4999f8bac7a4691d");
         var resultObjects = AllChildren(JObject.Parse(data))
             .First(c => c.Type == JTokenType.Array && c.Path.Contains("results"))
             .Children<JObject>();
 
-        foreach (JObject result in resultObjects) {
-            
-                
-                var obj = JsonConvert.DeserializeObject<Movie>(result.ToString());
-                movies.Add(obj);
-                
-                Console.WriteLine(obj.PosterPath);
-            
-            
+        foreach (JObject result in resultObjects)
+        {
+            var obj = JsonConvert.DeserializeObject<Movie>(result.ToString());
+            movies.Add(obj);
+
+            Console.WriteLine(obj.BackdropPath);
         }
-        
     }
-    
+
     private static IEnumerable<JToken> AllChildren(JToken json)
     {
-        foreach (var c in json.Children()) {
+        foreach (var c in json.Children())
+        {
             yield return c;
-            foreach (var cc in AllChildren(c)) {
+            foreach (var cc in AllChildren(c))
+            {
                 yield return cc;
             }
         }
