--- a/BlazorApp1/Pages/MovieDetails.razor
+++ b/BlazorApp1/Pages/MovieDetails.razor
@@ -2,6 +2,7 @@
 @using System.Net
 @using Newtonsoft.Json
 @using MoviesFunction.Models
+@using Newtonsoft.Json.Linq
 
 <MudLayout>
     <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
@@ -31,9 +32,14 @@
                             </MudButton>
                         </span>
                     </div>
-                    <MudText>
+                    <MudText Class="pt-2">
                         @movieDescription
                     </MudText>
+                    <MudText Class="pt-2"><span class="pr-5">Country:</span><span>@countryName</span></MudText>
+                    <MudText Class="pt-2"><span class="pr-5">Genre:</span><span>@genre</span></MudText>
+                    <MudText Class="pt-2"><span class="pr-5">Released:</span><span>@releaseDate</span></MudText>
+                    <MudText Class="pt-2"><span class="pr-5">Production:</span><span>@productionCompanies</span></MudText>
+                    <MudText Class="pt-2"><span class="pr-5">Casts:</span><span>@cast</span></MudText>
                 </MudCardContent>
             </MudCard>
         </MudItem>
@@ -50,16 +56,29 @@
     public string runTime { get; set; }
     public string voteAverage { get; set; }
     public string releaseDate { set; get; }
-    
+    public List<ProductionCountry> productionCountry;
+    public string countryName { get; set; }
+    public List<Genre> genres;
+    public string genre { get; set; }
+    public List<ProductionCompany> productionCompanyList;
+    public string productionCompanies { get; set; }
+    public List<PeopleEntity> people = new();
+    public string cast { get; set; }
+
     protected override void OnParametersSet()
     {
     //the param will be set now
         var id = Value;
-        
-        string url = "https://api.themoviedb.org/3/movie/"+id+"?api_key=a5ab4805002668ee4999f8bac7a4691d&language=en-US";
+        MovieDetailsApi(id);
+        MovieCastApi(id);
+    }
+
+    private void MovieDetailsApi(string id)
+    {
+        string detailsUrl = "https://api.themoviedb.org/3/movie/"+id+"?api_key=a5ab4805002668ee4999f8bac7a4691d&language=en-US";
         using (WebClient wc = new WebClient())
         {
-            var json = wc.DownloadString(url);
+            var json = wc.DownloadString(detailsUrl);
             var obj = JsonConvert.DeserializeObject<Movie>(json);
             posterPath = "https://image.tmdb.org/t/p/w200" + obj.PosterPath;
             movieTitle = obj.Title;
@@ -67,6 +86,61 @@
             runTime = obj.Runtime + " min";
             voteAverage = obj.VoteAverage + "/10";
             releaseDate = obj.ReleaseDate;
+            productionCountry = obj.ProductionCountries;
+            genres = obj.Genres;
+            productionCompanyList = obj.ProductionCompanies;
+
+            
+            
+            foreach (var countryVar in productionCountry)
+            {
+                countryName = countryVar.Name.ToString();
+            }
+            foreach (var genreVar in genres)
+            {
+                genre += genreVar.Name.ToString() + ", ";
+            }
+            foreach (var companyVar in productionCompanyList)
+            {
+                productionCompanies += companyVar.Name.ToString() + ", ";
+            }
+        }
+    }
+
+    private void MovieCastApi(string id)
+    {
+        string peopleUrl = "https://api.themoviedb.org/3/movie/" + id + "/credits?api_key=a5ab4805002668ee4999f8bac7a4691d&language=en-US";
+        using (WebClient wc = new WebClient())
+        {
+            var json = wc.DownloadString(peopleUrl);
+            var resultObjects = AllChildren(JObject.Parse(json))
+                .First(c => c.Type == JTokenType.Array && c.Path.Contains("cast"))
+                .Children<JObject>();
+
+            foreach (JObject result in resultObjects) {
+                var obj = JsonConvert.DeserializeObject<PeopleEntity>(result.ToString());
+                people.Add(obj);
+            }
+            
+            // foreach (var castvar in people)
+            // {
+            //     cast += castvar.name.ToString() + ", ";
+            // }
+            for (int i = 0; i < 10; i++)
+            {
+                cast += people[i].name.ToString() + ", ";
+            }
+        }
+        
+    }
+    
+    private static IEnumerable<JToken> AllChildren(JToken json)
+    {
+        foreach (var c in json.Children()) {
+            yield return c;
+            foreach (var cc in AllChildren(c)) {
+                yield return cc;
+            }
         }
     }
     
