--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -12,10 +12,9 @@
 
 <MudLayout>
     <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
-        
+        <p><b>Trending Movies</b></p>   
         <div class="container" style="height: 310px">
-            
-                @foreach (var item in movies)
+            @foreach (var item in movies)
                 {
                     var poster = "https://image.tmdb.org/t/p/w200" + @item.PosterPath;
 
@@ -25,10 +24,7 @@
                         </MudPaper>
                     </MudButton>
                 }
-            
         </div>
-
-
     </MudContainer>
 </MudLayout>
 
