--- a/BlazorApp1/Pages/MovieDetails.razor
+++ b/BlazorApp1/Pages/MovieDetails.razor
@@ -178,17 +178,17 @@
                 people.Add(obj);
             }
 
-    // for (int i = 0; i < 10; i++)
-    // {
-    //     if (i < 9)
-    //     {
-    //         cast += people[i].name.ToString() + ", ";
-    //     }
-    //     else
-    //     {
-    //         cast += people[i].name.ToString();
-    //     }
-    // }
+            for (int i = 0; i < 10; i++)
+            {
+                if (i < 9)
+                {
+                    cast += people[i].name.ToString() + ", ";
+                }
+                else
+                {
+                    cast += people[i].name.ToString();
+                }
+            }
         }
     }
 
